2004-04-06  Kenichi Handa  <handa@m17n.org>

	* language/ethio-util.el (ethio-sera-being-called-by-w3): New
	variable.
	(ethio-sera-to-fidel-ethio): Check ethio-sera-being-called-by-w3
	instead of sera-being-called-by-w3.
	(ethio-fidel-to-sera-buffer): Likewise.
	(ethio-find-file): Bind ethio-sera-being-called-by-w3 to t
	instead of sera-being-called-by-w3.
	(ethio-write-file): Likewise.

2004-04-05  Nick Roberts  <nick@nick.uklinux.net>

	* progmodes/gdb-ui.el (gdb-use-inferior-io-buffer): New option.
	(gdb-ann3, gdb-send, gdb-starting, gdb-stopping)
	(gdb-setup-windows): Only use separate IO buffer if required.

2004-04-06  Kim F. Storm  <storm@cua.dk>

	* term.el (term-is-xemacs): Remove.
	(term-if-xemacs, term-ifnot-xemacs): Test (featurep 'xemacs).
	(term-window-width): New function.
	(term-mode, term-check-size): Use it.
	(term-mode): Disable overflow-newline-into-fringe in term buffer.

2004-04-05  Per Abrahamsen  <abraham@dina.kvl.dk>

	* cus-edit.el (custom-add-parent-links): Changed unbound variable
	`symbol' to `name'.

2004-04-05  Jesper Harder  <harder@ifa.au.dk>

	* info.el (info-apropos): New function.
	(Info-mode-menu): Add it.
	(Info-find-node, Info-find-node-2): Grok apropos virtual file.

	* help-mode.el (help-make-xrefs): Recognize aliased variable with
	inherited docstring.

	* play/gamegrid.el (gamegrid-add-score-insecure): Use sort-fields.

2004-04-04  Luc Teirlinck  <teirllm@auburn.edu>

	* autorevert.el (auto-revert-handler): If point (or a window
	point) is at the end of the buffer, keep it there after
	reverting.  This allows to tail a file.
	Mention this in the `Commentary'.

	* format.el (format-write-file): Add optional argument CONFIRM
	and make it behave like the analogous argument to `write-file'.

2004-04-04  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* progmodes/ebnf2ps.el: Doc fix.
	(ebnf-version): New version number (4.2).
	(ebnf-syntax): Customization and docstring fix.